kubernetes/qal/qal_app.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: voteapp
  labels:
    app: voteapplb
spec:
  selector:
    matchLabels:
      app: voteapplb
  replicas: 2
  template:
    metadata:
      labels:
        app: voteapplb
    spec:
      containers:
      - name: voteapp
        image: thjulian23/brief-8-tj-2:latest
        ports:
        - containerPort: 85
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: loadvoteapp
spec:
  type: ClusterIP
  ports:
  - port: 85
    targetPort: 80
  selector:
    app: voteapplb
